# OAuth2-plugin-example

./: .env.docker.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.debug  Dockerfile.debug.cn  FIX_INTELLISENSE.md  FUNCTIONAL_TEST_REPORT.md  LICENSE  README.md  RELOAD_VSCODE.md  REMAINING_BUGS.md  SECURITY_TEST_REPORT.md  SKILLS_UPGRADE_SUMMARY.md  TECH_SPECS.md  cleanup-docker.sh  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  docker-quick-verify-debug.sh  docker-quick-verify-release.sh  macos-quick-verify.sh  prometheus.yml  test-oauth2-endpoints.ps1
.agent/rules/: backend-rule.md
.agent/workflows/: docker-setup.md  pre-commit.md  test-checklist.md  test-e2e.md  verify-docker.md
.claude/: MEMORY.md  SETTINGS_README.md  settings.json  settings.local.json
.claude/agents/: api-documenter.md  ci-monitor.md  code-reviewer.md  compliance-checker.md  performance-analyzer.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-macos.yml.disabled  ci-multiplatform.yml  ci-windows.yml  ci.yml
.hooks/: config.json
OAuth2Admin/: package-lock.json  package.json  playwright.config.ts
OAuth2Backend/: CHANGELOG.md  CMakeLists.txt  MIGRATION_SUMMARY.md  conanfile.txt  config.ci.json  config.dev.json  config.json  config.json.bak  config.prod.json  config_env_runtime.json  main.cc  model.json  openapi.yaml  test_config_env_runtime.json
OAuth2Backend/.backup/: backup_info.txt  commit_hash.txt
OAuth2Backend/common/config/: ConfigManager.cc  ConfigManager.h  ConfigTypes.h
OAuth2Backend/common/documentation/: OpenApiGenerator.cc  OpenApiGenerator.h
OAuth2Backend/common/error/: ErrorHandler.cc  ErrorHandler.h  ErrorTypes.h  OAuth2ErrorHandler.cc
OAuth2Backend/common/types/: OAuth2Types.h
OAuth2Backend/common/utils/: CryptoUtils.h  SubjectGenerator.h
OAuth2Backend/common/validation/: ValidationRules.h  Validator.cc  Validator.h  ValidatorHelper.cc
OAuth2Backend/controllers/: AdminController.cc  ApiDocController.cc  ApiDocController.h  OAuth2Controller.cc  OAuth2Controller.h
OAuth2Backend/docs/: api-documentation-automation-tools.md  api_reference.md  architecture_overview.md  ci_cd_guide.md  docker_deployment.md  multiplatform_ci_troubleshooting.md  security_hardening.md  testing_guide.md
OAuth2Backend/docs/api/swagger-ui/: index.html
OAuth2Backend/docs/superpowers/plans/: 2026-04-13-hodor-rate-limiter-migration.md  2026-04-14-multiplatform-ci-plan.md
OAuth2Backend/docs/superpowers/specs/: 2026-04-13-hodor-rate-limiter-migration-design.md  2026-04-14-multiplatform-ci-design.md  2026-05-11-p1-phase2-controllers-design.md
OAuth2Backend/docs/superpowers/validation/: 2026-04-14-multiplatform-ci-validation-report.md
OAuth2Backend/filters/: RateLimiterFilter.cc
OAuth2Backend/models/: Oauth2AccessTokens.cc  Oauth2Clients.cc  Oauth2Clients.h  Oauth2Codes.cc  Oauth2Codes.h  Oauth2RefreshTokens.cc  Oauth2RefreshTokens.h  Oauth2Scopes.cc  Oauth2Scopes.h  Permissions.cc  RolePermissions.cc  Roles.cc  Users.cc  model.json  orm_compat.h
OAuth2Backend/plugins/: OAuth2Metrics.cc  OAuth2Plugin.cc  OAuth2Plugin.h
OAuth2Backend/scripts/: SCOPE_FIX_README.md  build.sh  install-hooks.sh  pre-commit-validate-openapi.sh  setup_database.bat  smart-build.bat  test.bat  validate-openapi-simple.sh  validate-openapi.sh
OAuth2Backend/services/: AuthService.cc  OAuth2CleanupService.cc  OAuth2CleanupService.h
OAuth2Backend/sql/: 001_oauth2_core.sql  004_oauth2_scopes.sql
OAuth2Backend/storage/: CachedOAuth2Storage.cc  CachedOAuth2Storage.h  IOAuth2Storage.h  MemoryOAuth2Storage.cc  MemoryOAuth2Storage.h  PostgresOAuth2Storage.cc  PostgresOAuth2Storage.h  RedisOAuth2Storage.cc  RedisOAuth2Storage.h
OAuth2Backend/test/: CMakeLists.txt  CMakeLists_debug.txt  ConfigMigrationTest.cc  DbLeakVerificationTest.cc  EnvConfigTest.cc  FunctionalTest.cc  IntegrationE2ETest.cc  MemoryStorageTest.cc  OAuth2FlowE2ETest.cc  P1FeatureTest.cc  P1FunctionalityTest.cc  PerformanceBenchmark.cc  PluginTest.cc  PostgresStorageTest.cc  RateLimiterTest.cc  RedirectUriValidationTest.cc  RedisStorageTest.cc  SchemaSetup.cc  SecurityTest.cc  SecurityValidationTest.cc  SubjectMappingTest.cc  UserTest.cc  fix_tests.py  test_main.cc  test_main_debug.cc
OAuth2Backend/test/common/: ConfigManagerTest.cc  ErrorHandlerTest.cc  OpenApiGeneratorTest.cc  ValidatorTest.cc
OAuth2Backend/test/performance/benchmark/: PerformanceBenchmark.cc
OAuth2Backend/test/services/: AuthServiceGetUserInfoTest.cc
OAuth2Backend/test/unit/subject/: P0FunctionalityTest.cc
OAuth2Frontend/: .env.example  .gitignore  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
OAuth2Frontend/public/: config.json
OAuth2Frontend/src/: App.vue
OAuth2Plugin/: CMakeLists.txt
OAuth2Plugin/src/: OAuth2Plugin.cc  (+1 more)
OAuth2Server/: AuthService.cc  CMakeLists.txt  config.ci.json  config.dev.json  config.json  config.prod.json  main.cc  openapi.yaml
PRD/: PROGRESS.md  implementation_plan.md  production_hardening_batch1_2.md
docs/: ACCOUNT_LOCKOUT.md  docker-debug-verification.md  docker-standardization.md  hardcoding-fixes-2026-05-02.md  macos-debug-guide.md  security-checklist.md
scripts/: check-doc-links.sh  cleanup-docker.sh  emoji_manager.py  generate-certs.sh  generate-jwt-keys.sh  quick-security-check.sh  security-check.sh  smoke-parity.ps1  smoke-parity.sh  test-frontend-url-config.sh
test-results/: docker-integration-test-report-final.html  health_status.json  oauth2_e2e_results.json  test_results_updated.json
(+141 files in other folders)
